--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -10,3 +10,18 @@ header {
 .content {
   padding: var(--content-padding);
 }
+
+.section-container {
+  color: white;
+  text-align: center;
+  margin-top: 4rem;
+}
+
+.paragraph-container {
+  display: block;
+  width: 50%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 2rem;
+  line-height: 1.75rem;
+}
