--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -15,7 +15,7 @@ header {
 .section-container {
   color: white;
   text-align: center;
-  margin-top: 4rem;
+  padding-top: 5rem;
 }
 
 .paragraph-container {
