responsively styling the stage again

--- a/src/app/components/sections/band-display/band-display.component.css
+++ b/src/app/components/sections/band-display/band-display.component.css
@@ -117,7 +117,7 @@ img {
 
     .band-wrapper {
         position: relative;
-        width: 70%;
+        width: 240px;
         height: 400px; 
     }
     
