just not displaying the light triangle in mobile version

--- a/src/app/components/sections/band-display/band-display.component.css
+++ b/src/app/components/sections/band-display/band-display.component.css
@@ -170,6 +170,7 @@ img {
     }
     
     .light-triangle {
+        display: none;
         top: 7rem;
         border-left: 100px solid transparent;  /* Half of the bottom width (820px / 2) */
         border-right: 100px solid transparent; /* Half of the bottom width (820px / 2) */
