--- a/src/app/components/sections/band-display/band-display.component.css
+++ b/src/app/components/sections/band-display/band-display.component.css
@@ -243,6 +243,7 @@ img {
     }
     
     .light-triangle {
+        display: block;
         top: calc(3rem + 50px);
         border-left: 200px solid transparent;  /* Half of the bottom width (820px / 2) */
         border-right: 200px solid transparent; /* Half of the bottom width (820px / 2) */
